# time-board

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2023-01-03-135731_create_users/: down.sql  up.sql
migrations/2023-01-06-142102_create_projects/: down.sql  up.sql
migrations/2023-01-06-171808_create_tasks/: down.sql  up.sql
migrations/2023-01-06-172352_create_sessions/: down.sql  up.sql
migrations/2023-01-06-172920_session_default_timestamp/: down.sql  up.sql
migrations/2023-01-21-085656_tokens_default_timestamp/: up.sql
src/: main.rs  schema.rs
src/db/: connection.rs  get_user.rs  mod.rs  register_user.rs  registration_user.rs  select_user.rs  token.rs  token_manager.rs
src/handlers/authentication/: login.rs  registration.rs
src/models/: mod.rs  project.rs  session.rs  task.rs  user.rs
src/routes/: authentication.rs  index.rs  mod.rs  projects.rs  routes_setup.rs  sessions.rs  tasks.rs
src/routes/route_objects/: access_token.rs  error_response.rs  login_request.rs  login_response.rs  mod.rs  project_request.rs  project_response.rs  registration_request.rs  task_request.rs
src/tests/: base.rs
