[package]
name = "time-board"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.10"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
r2d2 = "0.8.10"
argon2 = "0.2.1"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "json"]