[package]
name = "time-board"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
r2d2 = "0.8.10"
argon2 = "0.2.1"
serde = "1.0.151"
serde_json = "1.0.91"
serde_derive = "1.0.151"
uuidv7 = "0.1.1"
base64 = "0.20.0"
diesel_migrations = "2.0.0"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]